fixing issues on mobile

--- a/src/landing/landing.module.scss
+++ b/src/landing/landing.module.scss
@@ -120,7 +120,7 @@
       0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
       0 100px 80px rgba(0, 0, 0, 0.12);
     border-radius: 5px;
-    float: left;
+
     overflow: hidden;
     position: relative;
     outline: none;
